tests/examples/good/garbage_collector/good501.lat
int main() {
    (new A).f();
    return 0;
}

class A {
    int a;
    int b;
    string s;
    string s2;
    void f () {
        a = 42;
        printInt(a);
    }
}

A newA() {
    A a = new A;
    a.a = 42;
    return a;
}

class B {
    A a;
}