tests/examples/bad/inheritance_method_arg_type_mismatch.lat
int main() {
    return 1;
}

class A {
    int f(int b) {
        return 1;
    }
}

class B extends A {
    int f(bool b) {
        return 2; 
    }
}